--- a/.github/workflows/trigger-ci.yml
+++ b/.github/workflows/trigger-ci.yml
@@ -8,6 +8,6 @@ jobs:
   trigger:
     uses: GabrielLLR/repo-ci-cd/.github/workflows/pr-validation-and-jira.yml@main
     with:
-      swagger_path: "swagger.yaml"
+      SWAGGER_FILE : "swagger.yaml"
     secrets:
       REPO_ACCESS_TOKEN: ${{ secrets.REPO_ACCESS_TOKEN }}
