--- a/.github/workflows/trigger-ci.yml
+++ b/.github/workflows/trigger-ci.yml
@@ -1,13 +1,16 @@
 name: Trigger CI/CD Workflow (PR de Fork)
+
 on:
   pull_request_target:
+    types:
+      - opened
+      - synchronize
+      - reopened
     branches:
       - main  # Ou outra branch alvo
 
 jobs:
   trigger:
     uses: GabrielLLR/repo-ci-cd/.github/workflows/pr-validation-and-jira.yml@main
-    with:
-      swagger_path: "swagger.yaml"
     secrets:
       REPO_ACCESS_TOKEN: ${{ secrets.REPO_ACCESS_TOKEN }}
