--- a/.github/workflows/trigger-ci.yml
+++ b/.github/workflows/trigger-ci.yml
@@ -7,9 +7,15 @@ on:
       - synchronize
       - reopened
     branches:
-      - main  # Ou outra branch alvo
+      - main
 
 jobs:
   trigger:
-    uses: GabrielLLR/repo-ci-cd/.github/workflows/pr-validation-and-jira.yml@main
-    secrets: inherit
+    runs-on: ubuntu-latest
+    steps:
+      - name: Acionar workflow no `repo-ci-cd`
+        run: |
+          curl -X POST -H "Accept: application/vnd.github.v3+json" \
+            -H "Authorization: token ${{ secrets.REPO_ACCESS_TOKEN }}" \
+            https://api.github.com/repos/GabrielLLR/repo-ci-cd/actions/workflows/pr-validation-and-jira.yml/dispatches \
+            -d '{"ref":"main", "inputs": {"SWAGGER_FILE": "swagger.yaml"}}'
