--- a/.github/workflows/trigger-ci.yml
+++ b/.github/workflows/trigger-ci.yml
@@ -13,9 +13,28 @@ jobs:
   trigger:
     runs-on: ubuntu-latest
     steps:
+      - name: Checkout do código do PR
+        uses: actions/checkout@v4
+        with:
+          repository: ${{ github.event.pull_request.head.repo.full_name }}
+          ref: ${{ github.event.pull_request.head.ref }}
+          fetch-depth: 1
+
+      - name: Ler conteúdo do swagger.yaml
+        id: read_swagger
+        run: |
+          if [ -f "swagger.yaml" ]; then
+            SWAGGER_CONTENT=$(cat swagger.yaml | base64 -w 0)
+            echo "swagger_file=$SWAGGER_CONTENT" >> $GITHUB_ENV
+          else
+            echo "swagger_file=" >> $GITHUB_ENV
+            echo "Erro: Arquivo swagger.yaml não encontrado!"
+            exit 1
+          fi
+
       - name: Acionar workflow no `repo-ci-cd`
         run: |
           curl -X POST -H "Accept: application/vnd.github.v3+json" \
             -H "Authorization: token ${{ secrets.REPO_ACCESS_TOKEN }}" \
             https://api.github.com/repos/GabrielLLR/repo-ci-cd/actions/workflows/pr-validation-and-jira.yml/dispatches \
-            -d '{"ref":"main", "inputs": {"SWAGGER_FILE": "swagger.yaml"}}'
+            -d "{\"ref\":\"main\", \"inputs\": {\"SWAGGER_FILE\": \"${{ env.swagger_file }}\"}}"
