--- a/.github/workflows/trigger-ci.yml
+++ b/.github/workflows/trigger-ci.yml
@@ -19,13 +19,30 @@ jobs:
           RAW_URL="https://raw.githubusercontent.com/${{ github.event.pull_request.head.repo.full_name }}/${{ github.event.pull_request.head.ref }}/swagger.yaml"
           echo "SWAGGER_RAW_URL=$RAW_URL" >> $GITHUB_ENV
 
-      - name: Exibir URL do Arquivo Swagger (Debug)
+      - name: Capturar Informações do PR
+        run: |
+          echo "PR_TITLE=${{ github.event.pull_request.title }}" >> $GITHUB_ENV
+          echo "PR_URL=${{ github.event.pull_request.html_url }}" >> $GITHUB_ENV
+          echo "PR_AUTHOR=${{ github.event.pull_request.user.login }}" >> $GITHUB_ENV
+
+      - name: Exibir Variáveis do PR (Debug)
         run: |
           echo "Swagger YAML disponível em: ${{ env.SWAGGER_RAW_URL }}"
+          echo "Título do PR: ${{ env.PR_TITLE }}"
+          echo "URL do PR: ${{ env.PR_URL }}"
+          echo "Autor do PR: ${{ env.PR_AUTHOR }}"
 
       - name: Acionar workflow no `repo-ci-cd`
         run: |
           curl -X POST -H "Accept: application/vnd.github.v3+json" \
             -H "Authorization: token ${{ secrets.REPO_ACCESS_TOKEN }}" \
             https://api.github.com/repos/GabrielLLR/repo-ci-cd/actions/workflows/pr-validation-and-jira.yml/dispatches \
-            -d "{\"ref\":\"main\", \"inputs\": {\"SWAGGER_FILE_URL\": \"${{ env.SWAGGER_RAW_URL }}\"}}"
+            -d "{
+              \"ref\": \"main\",
+              \"inputs\": {
+                \"SWAGGER_FILE_URL\": \"${{ env.SWAGGER_RAW_URL }}\",
+                \"PR_TITLE\": \"${{ env.PR_TITLE }}\",
+                \"PR_URL\": \"${{ env.PR_URL }}\",
+                \"PR_AUTHOR\": \"${{ env.PR_AUTHOR }}\"
+              }
+            }"
