--- a/.github/workflows/trigger-tag-control.yml
+++ b/.github/workflows/trigger-tag-control.yml
@@ -29,5 +29,5 @@ jobs:
           curl -X POST -H "Accept: application/vnd.github.v3+json" \
           -H "Authorization: Bearer ${{ secrets.REPO_ACCESS_TOKEN }}" \
           -H "Content-Type: application/json" \
-          -d "{\"ref\": \"main\", \"inputs\": {\"repository\": \"${{ github.repository }}\", \"branch\": \"${{ github.event.pull_request.base.ref }}\", \"version\": \"$VERSION\", \"title\": \"$TITLE\"}}" \
+          -d "{\"ref\": \"main\", \"inputs\": {\"repository\": \"${{ github.repository }}\", \"branch\": \"${{ github.event.pull_request.base.ref }}\", \"version\": \"$VERSION\", \"title\": \"$TITLE\", \"pr_number\": \"${{ github.event.pull_request.number }}\"}}" \
           "https://api.github.com/repos/GabrielLLR/repo-ci-cd/actions/workflows/tag-control.yml/dispatches"
