--- a/.github/workflows/trigger-ci.yml
+++ b/.github/workflows/trigger-ci.yml
@@ -13,11 +13,14 @@ jobs:
   trigger:
     runs-on: ubuntu-latest
     steps:
-      - name: Construir a URL RAW do Swagger.yaml
-        id: get_raw_url
+      - name: Construir a URL RAW do Swagger.yaml (Novo)
+        id: get_raw_urls
         run: |
-          RAW_URL="https://raw.githubusercontent.com/${{ github.event.pull_request.head.repo.full_name }}/${{ github.event.pull_request.head.ref }}/swagger.yaml"
-          echo "SWAGGER_RAW_URL=$RAW_URL" >> $GITHUB_ENV
+          SWAGGER_NEW_URL="https://raw.githubusercontent.com/${{ github.event.pull_request.head.repo.full_name }}/${{ github.event.pull_request.head.ref }}/swagger.yaml"
+          SWAGGER_OLD_URL="https://raw.githubusercontent.com/${{ github.event.pull_request.base.repo.full_name }}/${{ github.event.pull_request.base.ref }}/swagger.yaml"
+
+          echo "SWAGGER_NEW_URL=$SWAGGER_NEW_URL" >> $GITHUB_ENV
+          echo "OLD_SWAGGER_FILE_URL=$SWAGGER_OLD_URL" >> $GITHUB_ENV
 
       - name: Capturar Informações do PR
         run: |
@@ -27,7 +30,8 @@ jobs:
 
       - name: Exibir Variáveis do PR (Debug)
         run: |
-          echo "Swagger YAML disponível em: ${{ env.SWAGGER_RAW_URL }}"
+          echo "Swagger YAML (novo): ${{ env.SWAGGER_NEW_URL }}"
+          echo "Swagger YAML (antigo): ${{ env.OLD_SWAGGER_FILE_URL }}"
           echo "Título do PR: ${{ env.PR_TITLE }}"
           echo "URL do PR: ${{ env.PR_URL }}"
           echo "Autor do PR: ${{ env.PR_AUTHOR }}"
@@ -40,7 +44,8 @@ jobs:
             -d "{
               \"ref\": \"main\",
               \"inputs\": {
-                \"SWAGGER_FILE_URL\": \"${{ env.SWAGGER_RAW_URL }}\",
+                \"SWAGGER_FILE_URL\": \"${{ env.SWAGGER_NEW_URL }}\",
+                \"OLD_SWAGGER_FILE_URL\": \"${{ env.OLD_SWAGGER_FILE_URL }}\",
                 \"PR_TITLE\": \"${{ env.PR_TITLE }}\",
                 \"PR_URL\": \"${{ env.PR_URL }}\",
                 \"PR_AUTHOR\": \"${{ env.PR_AUTHOR }}\"
